<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/kamer2"
    tools:context="com.example.jingleski.smartlapp.StartChildActivity">

    <Button
        android:id="@+id/addition"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/plus"
        android:onClick="sendMessageAddition"
        android:contentDescription="@string/addition"
        android:textColor="@android:color/holo_purple"
        android:textSize="72sp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/subtraction"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toTopOf="@+id/act_start_child_textView"
        app:layout_constraintVertical_bias="0.428" />

    <Button
        android:id="@+id/subtraction"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:onClick="sendMessageSubtraction"
        android:contentDescription="@string/subtraction"
        android:textSize="36sp"
        android:background="@drawable/min"
        app:layout_constraintLeft_toRightOf="@+id/addition"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toTopOf="@+id/act_start_child_textView"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="57dp"
        app:layout_constraintVertical_bias="0.428" />

    <Button
        android:id="@+id/split"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        android:fontFamily="casual"
        android:onClick="sendMessageSplit"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbars="vertical"
        android:text="@string/split"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/act_start_child_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:textSize="48sp"
        android:fontFamily="casual"
        android:backgroundTint="@android:color/holo_blue_light"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />
</android.support.constraint.ConstraintLayout>
