<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jingleski.smartlapp.CountActivity">

    <TextView
        android:id="@+id/number1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="X"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/sign"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/empty"
        android:textSize="30sp"
        app:layout_constraintLeft_toRightOf="@+id/number1"
        app:layout_constraintRight_toLeftOf="@+id/number2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/number2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="Y"
        android:textSize="30sp"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintLeft_toRightOf="@+id/sign"
        app:layout_constraintRight_toLeftOf="@+id/equalsign"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/equalsign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/equals"
        android:textSize="30sp"
        app:layout_constraintLeft_toRightOf="@+id/number2"
        app:layout_constraintRight_toLeftOf="@+id/result"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/result"
        android:layout_width="47dp"
        android:layout_height="51dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/empty"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/equalsign"
        app:layout_constraintLeft_toRightOf="@id/equalsign"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="100dp"
        android:text="@string/validate_result"
        android:textSize="64sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number2" />

</android.support.constraint.ConstraintLayout>
